# audiominst_tutorial

./: README.md  data.py  experiments.py  model.py  pyproject.toml  train.py
